--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
         android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintLeft_toRightOf="parent" />
+        app:layout_constraintLeft_toRightOf="parent"
+        android:orientation="horizontal" />
 
     <ImageView
         android:id="@+id/searchButton"
@@ -77,8 +78,8 @@
         android:layout_width="164dp"
         android:layout_height="36dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/favouriteButton"
-        app:layout_constraintStart_toEndOf="@+id/searchButton"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
